tests/error/match_errors/pattern_mismatch1.err
Error: Type mismatch (at $FILE:15:13)
   | 
13 | def main(north: Enum) -> None:
14 |     match north:
15 |         case Point(1):
   |              ^^^^^ Expected pattern of type `Enum`, got `Point`

Guppy compilation failed due to 1 previous error
